--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   /* background-color: rgba(255, 255, 255, 0.87); */
-  background-color: lightblue !important;
+  background-color: rgb(214, 248, 227) !important;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -32,6 +32,7 @@ body {
 
 input {
   margin-left: 0.5em;
+  background-color: aliceblue;
 }
 
 #app {
@@ -39,4 +40,22 @@ input {
   margin: 0 auto;
   padding: 2rem 0;
   text-align: center;
+}
+
+/* For Component Library */
+.card-message {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block !important;
+}
+
+.text-input {
+  background-color: azure;
+}
+
+.fab-title {
+  height: 40px !important;
+  font-size: 0.8em !important;
+  width: auto !important;
 }
