--- a/src/app.css
+++ b/src/app.css
@@ -37,7 +37,6 @@ input {
 #app {
   width: 100%;
   margin: 0 auto;
-  padding: 2rem 0;
   text-align: center;
 }
 
@@ -52,6 +51,7 @@ input {
 
 .text-input {
   background-color: azure;
+  width: 100%;
 }
 
 .fab-title {
